<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SelectRizhuShizhuActivity">

    <TextView
        android:id="@+id/tv_rizhu"
        android:text="@string/please_select_rizhu"
app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="80dp" />
    <Spinner
        android:id="@+id/spinner_rizhu"
        app:layout_constraintTop_toBottomOf="@+id/tv_rizhu"
        android:layout_width="match_parent"
        android:layout_height="80dp"></Spinner>
    <TextView
        android:id="@+id/tv_shizhu"
        android:text="@string/please_select_shizhu"
        app:layout_constraintTop_toBottomOf="@+id/spinner_rizhu"
        android:layout_width="match_parent"
        android:layout_height="80dp" />
    <Spinner
        android:id="@+id/spinner_shizhu"
        app:layout_constraintTop_toBottomOf="@+id/tv_shizhu"
        android:layout_width="match_parent"
        android:layout_height="80dp"></Spinner>

    <Button
        android:id="@+id/bt_cancel"
        android:text="@string/cancel"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/bt_ok"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="0dp"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/bt_ok"
        android:text="@string/ok"
        app:layout_constraintLeft_toRightOf="@+id/bt_cancel"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="0dp"
        android:layout_height="wrap_content" />
</android.support.constraint.ConstraintLayout>